k8s-exercises/Task03_k8s_tls/app/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: app-crm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
